# mat-graf-komp

./: .gitignore  devenv.nix
definitely_not_pl_slides/: slides.typ
definitely_not_pl_slides/uni_logo/: uni_contour.cdr
plots/: main.py  pyproject.toml
rust/: Cargo.toml  \  zad4.txt
rust/src/: geometry.rs  lib.rs  main.rs  matrix.rs  quat.rs  vector.rs
rust/src/rays/: rays.rs
src/: main.rs  matrix.rs  vector.rs
typst/: bibliography.bib  bibliography.yml  kopano.typ  slides.typ
typst/uni_logo/: uni_logotype.cdr
